# gpu-bm3d-float

./: .gitignore  CMakeLists.txt  LICENSE-gpu-bm3d  README.md  _Makefile  aggregation.cu_inl  block_matching.cu_inl  bm3d.cu  bm3d.h  cmd.txt  denoise.cpp  lena_noisy.raw  params.h  stopwatch.hpp
